2016-08-18  Jari-Hermann Ernst, M.A.  <jari-hermann.ernst@bad-gmbh.de>

	* Initial code generated with kickstarter