@@ -20,7 +20,7 @@ $EM_CONF[$_EXTKEY] = array(
 	'dependencies' => '',
 	'conflicts' => '',
 	'priority' => '',
-	'module' => '',
+	'module' => 'mod1',
 	'state' => 'alpha',
 	'internal' => '',
 	'uploadfolder' => 0,
@@ -29,7 +29,7 @@ $EM_CONF[$_EXTKEY] = array(
 	'clearCacheOnLoad' => 0,
 	'lockType' => '',
 	'author_company' => '',
-	'version' => '0.0.0',
+	'version' => '0.0.1',
 	'constraints' => array(
 		'depends' => array(
 		),
