@@ -1,0 +1,10 @@
+<?php
+
+// DO NOT REMOVE OR CHANGE THESE 2 LINES:
+$MCONF['name'] = 'web_txjheremovetvM1';
+$MCONF['script'] = '_DISPATCH';
+
+$MCONF['access'] = 'admin';
+
+$MLANG['default']['tabs_images']['tab'] = 'moduleicon.gif';
+$MLANG['default']['ll_ref'] = 'LLL:EXT:jhe_removetv/mod1/locallang_mod.xml';
