@@ -1,0 +1,21 @@
+<?xml version="1.0" encoding="utf-8" standalone="yes" ?>
+<T3locallang>
+    <meta type="array">
+        <type>module</type>
+        <description>Language labels for module &quot;tools_txjheremovetvM1&quot;</description>
+    </meta>
+    <data type="array">
+        <languageKey index="default" type="array">
+            <label index="title">JHE Remove TV</label>
+            <label index="function1">Identify all content elements of type templavoila</label>
+            <label index="function2">Function 2</label>
+            <label index="function3">Function 3</label>
+        </languageKey>
+        <languageKey index="de" type="array">
+            <label index="title">JHE Remove TV</label>
+            <label index="function1">Identifiziere alle Inhaltselemente vom Typ temlplavoila</label>
+            <label index="function2">Funktion 2</label>
+            <label index="function3">Funktion 3</label>
+        </languageKey>
+    </data>
+</T3locallang>
