@@ -1,0 +1,19 @@
+<?xml version="1.0" encoding="utf-8" standalone="yes" ?>
+<T3locallang>
+    <meta type="array">
+        <type>module</type>
+        <description>Language labels for module &quot;tools_txjheremovetvM1&quot; - header, description</description>
+    </meta>
+    <data type="array">
+        <languageKey index="default" type="array">
+            <label index="mlang_tabs_tab">JHE Remove TV</label>
+            <label index="mlang_labels_tabdescr">Removes TV from the TYPO3 system</label>
+            <label index="mlang_labels_tablabel">Remove TV</label>
+        </languageKey>
+        <languageKey index="de" type="array">
+            <label index="mlang_tabs_tab">JHE Remove TV</label>
+            <label index="mlang_labels_tabdescr">Entfernt TemplaVoila aus dem TYPO3-System</label>
+            <label index="mlang_labels_tablabel">Remove TV</label>
+        </languageKey>
+    </data>
+</T3locallang>
